# fjordgard

./: .gitignore  Cargo.toml  fjordgard.desktop  index.html  readme.md
.github/workflows/: pages.yml  testing.yml
crates/unsplash/: Cargo.toml
crates/unsplash/src/: error.rs  lib.rs  model.rs
crates/weather/: Cargo.toml
crates/weather/src/: error.rs  lib.rs  model.rs
src/: background.rs  config.rs  icon.rs  main.rs  settings.rs
