[workspace]
members = [
  "crates/weather",
  "crates/unsplash"
]

[package]
name = "fjordgard"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
directories = "6.0.0"
fjordgard-unsplash = { version = "0.1.0", path = "crates/unsplash" }
fjordgard-weather = { version = "0.1.0", path = "crates/weather" }
iced = { version = "0.13.1", features = ["tokio", "canvas", "image", "svg"] }
log = "0.4.27"
rfd = "0.15.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = { version = "0.27.1", features = ["derive"] }

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
tokio = { version = "1.45.1", features = ["rt-multi-thread", "fs", "time"] }
env_logger = "0.11.8"
open = "5.3.2"

[target.'cfg(target_arch="wasm32")'.dependencies]
tokio = { version = "1.45.1", features = ["rt", "time"] }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
