[package]
name = "fjordgard-unsplash"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.13.0"
thiserror = "2.0.12"

[dev-dependencies]
tokio = { version = "1.45.1", features = ["rt", "macros"] }
