[package]
name = "fjordgard-unsplash"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.13.0"
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"

[dev-dependencies]
tokio = { version = "1.45.1", features = ["rt", "macros"] }
